force-app/main/default/objects/Guarantor__c/Guarantor__c.object-meta.xml
<CustomObject>
    <label>Guarantor</label>
    <nameField>
        <label>Gurantor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guarantors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>