force-app/main/default/objects/Guarantor__c/fields/SSIN_FIEN__c.field-meta.xml
<CustomField>
    <fullName>SSIN_FIEN__c</fullName>
    <label>SSIN</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>